--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       <h2 id="counter">0</h2>
       <button class="btn btn-primary btn-lg" id="dec">DEC</button>
       <button class="btn btn-primary btn-lg" id="inc">INC</button>
+      <button class="btn btn-primary btn-lg" id="rnd">RND</button>
     </div>
   </body>
 </html>
